--- a/src/tela/TelaLIstaOSs.form
+++ b/src/tela/TelaLIstaOSs.form
@@ -25,16 +25,16 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="892" max="-2" attributes="0"/>
-              <EmptySpace pref="21" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" pref="901" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace min="0" pref="23" max="32767" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="590" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jScrollPane1" pref="600" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -50,12 +50,11 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="9" rowCount="0">
+              <Table columnCount="8" rowCount="0">
                 <Column editable="false" title="Servi&#xe7;o feito" type="java.lang.String"/>
                 <Column editable="false" title="m&#xe3;o de obra" type="java.lang.String"/>
                 <Column editable="false" title="Data de abertura" type="java.lang.String"/>
                 <Column editable="false" title="Data de fechamento" type="java.lang.String"/>
-                <Column editable="false" title="c&#xf3;digo da pe&#xe7;a" type="java.lang.String"/>
                 <Column editable="false" title="Pe&#xe7;a usada" type="java.lang.String"/>
                 <Column editable="false" title="Quantidade usada" type="java.lang.String"/>
                 <Column editable="false" title="Valor unit&#xe1;rio" type="java.lang.String"/>
