--- a/src/tela/TelaLIstaOSs.form
+++ b/src/tela/TelaLIstaOSs.form
@@ -50,7 +50,8 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="8" rowCount="0">
+              <Table columnCount="9" rowCount="0">
+                <Column editable="false" title="C&#xf3;digo" type="java.lang.String"/>
                 <Column editable="false" title="Servi&#xe7;o feito" type="java.lang.String"/>
                 <Column editable="false" title="m&#xe3;o de obra" type="java.lang.String"/>
                 <Column editable="false" title="Data de abertura" type="java.lang.String"/>
