--- a/src/tela/TelaListaOrcamentos.form
+++ b/src/tela/TelaListaOrcamentos.form
@@ -73,7 +73,8 @@
         <Component class="javax.swing.JTable" name="jTableOrcamentos">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="9" rowCount="0">
+              <Table columnCount="10" rowCount="0">
+                <Column editable="false" title="C&#xf3;digo" type="java.lang.String"/>
                 <Column editable="false" title="Placa do veiculo" type="java.lang.String"/>
                 <Column editable="false" title="Servico feito" type="java.lang.String"/>
                 <Column editable="false" title="Data de abertura" type="java.lang.String"/>
